# kalman-bubble-tracking

./: .gitignore  README.md  pyproject.toml
src/: color_reducer.ipynb  dataloader.py  dl.ipynb  learnKalman.ipynb
