[project]
name = "HMC-Computer-Vision-Project"
version = "0.1.0"
description = "A short description of your package"
readme = "README.md"
requires-python = "3.13" # Was not working on 3.14

dependencies = [
]
authors = [{ name = "Angelina Rodriguez", email = "angrodriguez@hmc.edu" },
           { name = "Thomas Wing", email = "twing@hmc.edu" }]